@@ -18,11 +18,32 @@
 
 package de.gematik.demis.pdfgen.receipt.common.model.subsection;
 
+/*-
+ * #%L
+ * pdfgen-service
+ * %%
+ * Copyright (C) 2025 gematik GmbH
+ * %%
+ * Licensed under the EUPL, Version 1.2 or - as soon they will be approved by the
+ * European Commission – subsequent versions of the EUPL (the "Licence").
+ * You may not use this work except in compliance with the Licence.
+ *
+ * You find a copy of the Licence in the "Licence" file or at
+ * https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the Licence is distributed on an "AS IS" basis,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
+ * In case of changes by gematik find details in the "Readme" file.
+ *
+ * See the Licence for the specific language governing permissions and limitations under the Licence.
+ * #L%
+ */
+
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.springframework.util.CollectionUtils.isEmpty;
 
 import de.gematik.demis.pdfgen.receipt.common.service.transmittingsite.TransmittingSite;
-import de.gematik.demis.pdfgen.translation.TranslationAddressProvider;
 import javax.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -36,7 +57,7 @@ public class AddressFactory {
 
   private static final String HEALTH_DEPARTMENT_NAME_DELIMITER = " | ";
 
-  private final TranslationAddressProvider translationAddressProvider;
+  private final AddressTranslationService addressTranslationService;
   private final DemisAddressUseService demisAddressUseService;
 
   @Nullable
@@ -52,13 +73,14 @@ public class AddressFactory {
       return null;
     }
 
-    String countryName = translationAddressProvider.translateCountryCode(fhirAddress.getCountry());
+    String countryName = addressTranslationService.translateCountryCode(fhirAddress.getCountry());
     AddressDTO.AddressDTOBuilder addressBuilder =
         AddressDTO.builder()
             .postalCode(fhirAddress.getPostalCode())
             .city(fhirAddress.getCity())
             .country(countryName)
             .use(this.demisAddressUseService.toString(fhirAddress))
+            .useEnum(this.demisAddressUseService.toUseEnum(fhirAddress))
             .primaryAddress(this.demisAddressUseService.isPrimaryAddress(fhirAddress));
 
     if (fhirOrganization != null) {
@@ -88,10 +110,10 @@ public class AddressFactory {
 
   @Nullable
   private String getAddressLine(org.hl7.fhir.r4.model.Address fhirAddress) {
-    if (isEmpty(fhirAddress.getLine()) || fhirAddress.getLine().get(0) == null) {
+    if (isEmpty(fhirAddress.getLine()) || fhirAddress.getLine().getFirst() == null) {
       return null;
     }
-    return fhirAddress.getLine().get(0).getValue();
+    return fhirAddress.getLine().getFirst().getValue();
   }
 
   private static class OrganizationNameAndDepartment {
